--- a/nested-cloudformation-example-nginx/security-group-stack.yml
+++ b/nested-cloudformation-example-nginx/security-group-stack.yml
@@ -25,6 +25,10 @@ Resources:
           FromPort: '80'
           ToPort: '80'
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: '3000'
+          ToPort: '3000'
+          CidrIp: 0.0.0.0/0
   InstanceSecGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
@@ -35,6 +39,10 @@ Resources:
           FromPort: '80'
           ToPort: '80'
           CidrIp: 10.0.0.0/8
+        - IpProtocol: tcp
+          FromPort: '3000'
+          ToPort: '3000'
+          CidrIp: 0.0.0.0/0
 Outputs:
   ELBSecGroup:
     Value: !Ref ELBSecGroup
